--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@line/liff": "^2.5.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lib-flexible": "^0.3.2",
